QjackCtl - JACK Audio Connection Kit Qt GUI Interface
-----------------------------------------------------

ChangeLog

SVN TRUNK

- General source tree layout and build configuration change.

- Italian (it) translation added (by Sergio Atzori).

- Post-shutdown script invocation logic slightly refactored in
  attempt to enforce its execution on application quit.


0.3.6  2010-03-09  Full D-Busification!

- Make sure socket names are unique on each side of the Patchbay
  (another patch from Dominic Sacre, thanks).

- A bunch of primitive D-Bus interface slots have been added,
  allowing shortcut access to most of main applications actions
  like toggling Messages, Status, Connections, Patchbay widget
  pop-ups, reset stats, transport and so on. New bindings are
  given eg. via dbus-send --system / org.rncbc.qjackctl.(main, 
  messages, status, connections, patchbay, setup, about, reset,
  rewind, backward, play, pause, forward). (from an original
  idea from Sebastian Gutsfeld, thanks).

- Patchbay snapshot now tolerates JACK client port strings that
  have more than one semi-colon in it, honoring just the first
  one exactly as everywhere else eg. Connections. (a glitch as
  reported by Geoff Beasley while using a2jmidid).

- Most modal message dialog boxes (eg. critical errors) are now
  replaced by system tray icon bubble messages where available
  (mitigating feature request #2936455).

- Comply with jackd >= 0.118.0 which now runs in real-time mode by
  default; use of -R is now deprecated from the jackd command line
  interface options; use -r to run in non-real-time-scheduling.

- A man page has beed added.

- Got rid of a pretty old and never really useful "jackd-realtime"
  server path option--actually, it was only seen available on the
  now defunct old Mandrake Linux distro.

- D-Bus support, as provided by org.jackaudio.service aka jackdbus,
  is now being introduced and used wherever available and whenever